--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup SSH Keys
         uses: webfactory/ssh-agent@v0.5.0
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
  
       - name: Deploy
         env:
