--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,4 +25,4 @@ jobs:
           REMOTE_BRANCH: master  
      
         run: |
-          ssh ubuntu@43.142.71.248
+          ssh -o StrictHostKeyChecking=no ubuntu@43.142.71.248 "ls"
