--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,4 +25,4 @@ jobs:
           REMOTE_BRANCH: master  
      
         run: |
-          ssh -o StrictHostKeyChecking=no $REMOTE_USERubuntu@$REMOTE_HOST "ls"
+          ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "ls"
