--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,4 +22,4 @@ jobs:
           REMOTE_BRANCH: master  
      
         run: |
-          ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "ls"
+          ssh -o StrictHostKeyChecking=no $REMOTE_USER@$REMOTE_HOST "./deploy.sh"
